<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:background="@color/black"
            android:orientation="horizontal"
            android:weightSum="2">

            <FrameLayout
                android:id="@+id/local"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <FrameLayout
                android:id="@+id/remote"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />

        </LinearLayout>

        <TextView
            android:id="@+id/call_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="00:00"
            android:textSize="14sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="10dp"
            android:text="请输入用户ID:"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/et_userId"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp"
            android:background="@color/white"
            android:hint="请输入"
            android:inputType="number"
            android:maxLength="11"
            android:maxLines="1"
            android:singleLine="true"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:textSize="14sp" />


        <LinearLayout
            android:id="@+id/device_linearLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="40dp"
            android:visibility="gone"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/switch_camera"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/shape_device_btn"
                    android:text="@string/switch_camera"
                    android:textColor="@color/blue"
                    android:textSize="15sp" />

                <Button
                    android:id="@+id/stop_camera"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="20dp"
                    android:layout_weight="1"
                    android:background="@drawable/shape_device_btn"
                    android:text="@string/stop_camera"
                    android:textColor="@color/blue"
                    android:textSize="15sp" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/enableMicrophone"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginRight="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/shape_device_btn"
                    android:text="@string/enableMicrophoneNo"
                    android:textColor="@color/blue"
                    android:textSize="15sp" />

                <Button
                    android:id="@+id/enableSpeaker"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_weight="1"
                    android:background="@drawable/shape_device_btn"
                    android:text="@string/enableSpeakerNo"
                    android:textColor="@color/blue"
                    android:textSize="15sp" />
            </LinearLayout>
        </LinearLayout>


    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical">


        <TextView
            android:id="@+id/tv_status"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="30dp"
            android:gravity="center_horizontal"
            android:text="@string/call_status"
            android:textColor="@color/black"
            android:textSize="15sp" />

        <LinearLayout
            android:id="@+id/action_panel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">


            <Button
                android:id="@+id/accept"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_margin="20dp"
                android:layout_weight="1"
                android:background="@drawable/shape_call_plus_invite"
                android:text="@string/call"
                android:textColor="@color/white"
                android:textSize="15sp"
                android:visibility="visible" />

            <Button
                android:id="@+id/hang_up"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_margin="20dp"
                android:layout_weight="1"
                android:background="@drawable/shape_call_plus_hangup"
                android:text="@string/hang_up"
                android:textColor="@color/white"
                android:textSize="15sp"
                android:visibility="gone" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>